--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Slab:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" />
 
     <link rel="icon" type="image" href="images/favicon.webp" />
   </head>
