--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
     />
 
-    <link rel="icon" type="image" href="images/favicon.webp" />
+    <link rel="icon" type="image" href="images/dollar.svg" />
   </head>
   <body>
     <div id="overlays"></div>
